update on website

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ title: Mangan Jekyll Theme
 email: example@domain.com
 author: username
 keywords: "Your, Keyword, Here"
-description: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nihil, velit odio quia autem quos. Natus itaque sint, nisi fuga dolorum. Iste ea cumque, aliquam dignissimos vitae labore atque minima?"
+description: "I am Pengwei from "
 social_username: username
 
 # Build settings ...
