--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "Your NameXXX / Site Title"
 title_separator          : "-"
 name                     : &name "Your Name XXX"
 description              : &description "personal description"
