--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@ title                    : "Your NameXXX / Site Title"
 title_separator          : "-"
 name                     : &name "Your Name XXX"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://penway.github.io/penway/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -26,8 +26,8 @@ author:
   name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Nanjing/Singapore"
+  employer         : ""
   uri              : # URL
   email            : "none@example.org" 
 
