--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /CV_WangPengwei.pdf
+    url: files/CV_WangPengwei.pdf
     
   # - title: "Guide"
   #   url: /markdown/
