--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@ title                    : "Pengwei's Cabin"
 title_separator          : "-"
 name                     : &name "Your Name XXX"
 description              : &description "personal description"
-url                      : https://penway.github.io/penway/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : penway.cn # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
