--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default"
 title                    : "Pengwei's Cabin"
 title_separator          : "-"
-name                     : &name "Your Name XXX"
+name                     : &name "Pengwei"
 description              : &description "personal description"
 url                      : https://penway.cn/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
